--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "pink_portfolio_template",
+  "name": "emma_portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.23",
     "tailwindcss": "^3.4.19"
   }
 }
